feat: atualiza AuthController e AuthService para melhorar registro e autenticação de usuários refactor: ajusta ClienteService para simplificar criação e busca de clientes